--- a/index.html
+++ b/index.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<meta http-equiv="Content-Type" content="text/html; charset=windows-1252">
-	<link rel="stylesheet" type="text/css" href="index.css">
-	<script type="text/javascript">
-    window.$ = window.jQuery = require('jquery');
-	</script>
-	<script type="text/javascript" src="app.js"></script>
-	<script type="text/javascript">
+	<link rel="stylesheet" href="index.css">
+	<script>
+		window.$ = window.jQuery = require('jquery');
 		i2root = 'https://iodine.tjhsst.edu/';
-		currentdate = '20150830';
 		dayschedule_type = 'box';
+		$(function() {
+			init_dayschedule();
+			$(document).ajaxComplete(function() {
+  				//$(".log").text("Triggered ajaxComplete handler.");
+			});
+			$("body").keydown(function(e) {
+				if (e.keyCode == 37) {
+					// left
+					day_jump(-1);
+				} else if (e.keyCode == 39) {
+					// right
+					day_jump(1);
+				}
+			});
+		});
 	</script>
-	<script type="text/javascript">
-		init_dayschedule();
-	</script>
+	<script src="app.js"></script>
 </head>
 <body>
 	<div class="dayschedule box">
@@ -25,7 +33,7 @@
 			&#9658;
 		</div>
 		<div class="day-name">
-			<span>Sunday, August 30</span>
+			<span>LOADING</span>
 			<div class="view-week" onclick="load_week()">
 				Week
 				<span class="day-up">
@@ -35,7 +43,7 @@
 			</div>
 		</div>
 		<div class="day-type noschool" title="noschool">
-			No School
+			Please Wait
 		</div>
 		<div class="day-schedule">
 			<table class="schedule-tbl"></table>
