--- a/index.html
+++ b/index.html
@@ -2,56 +2,30 @@
 <html>
 
 <head>
-	<link rel="stylesheet" type="text/css" href="css/font-awesome.min.css">
+	<link rel="stylesheet" href="css/font-awesome.min.css">
+
+	<link rel="stylesheet" href="css/opensans.css">
+
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/base.css">
+	<link rel="stylesheet" href="css/schedule.css">
+	<link rel="stylesheet" href="css/login.css">
+
 	<style>
-		/* open-sans-regular - latin */
-		@font-face {
-		  font-family: 'Open Sans';
-		  font-style: normal;
-		  font-weight: 400;
-		  src: local('Open Sans'), local('OpenSans'),
-		       url('fonts/open-sans-v13-latin-regular.woff2') format('woff2'), /* Chrome 26+, Opera 23+ */
-		       url('fonts/open-sans-v13-latin-regular.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-		}
-		/* open-sans-700 - latin */
-		@font-face {
-		  font-family: 'Open Sans';
-		  font-style: normal;
-		  font-weight: 700;
-		  src: local('Open Sans Bold'), local('OpenSans-Bold'),
-		       url('fonts/open-sans-v13-latin-700.woff2') format('woff2'), /* Chrome 26+, Opera 23+ */
-		       url('fonts/open-sans-v13-latin-700.woff') format('woff'); /* Chrome 6+, Firefox 3.6+, IE 9+, Safari 5.1+ */
-		}
-	</style>
-	<!--<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:100italic,400italic,700italic,100,400,700">-->
-
-	<link rel="stylesheet" type="text/css" href="css/base.css">
-	<link rel="stylesheet" type="text/css" href="css/themes.css">
-	<link rel="stylesheet" type="text/css" href="css/responsive.css">
-
-	<link rel="stylesheet" type="text/css" href="css/schedule.css">
-	<link rel="stylesheet" type="text/css" href="css/login.css">
-
-	<style type="text/css">
 		.center-wrapper {
 			min-height: auto;
 		}
-
 		.center-wrapper .center {
 			margin: 0;
 			top: 0;
 		}
-
-		body {
-			background: transparent;
-		}
 	</style>
 
-	<script>window.$=window.jQuery=require('jquery');</script>
-	<script type="text/javascript" src="js/vendor/jquery.cookie.js"></script>
-	<script type="text/javascript" src="js/common.js"></script>
-	<script type="text/javascript" src="js/schedule.js"></script>
-	<script type="text/javascript" src="js/app.js"></script>
+	<script>window.$=window.jQuery=require('jquery')</script>
+	<script>window.Cookies=require('js-cookie')</script>
+	<script src="js/common.js"></script>
+	<script src="js/schedule.js"></script>
+	<script src="js/app.js"></script>
 </head>
 
 <body>
