Ready for v0.0.3-alpha
After catching up to multiple Ion Updates (Including
the switch to SCSS for Ion Development), the app is stable and
ready to be deployed (or at least shared)

--- a/index.html
+++ b/index.html
@@ -25,15 +25,16 @@
 	</style>
 
 
-	<script type="text/javascript">window.$=window.jQuery=require('jquery')</script>
-	<script type="text/javascript">window.Cookies=require('js-cookie')</script>
+	<script type="text/javascript">
+		window.$=window.jQuery=require('jquery')
+		window.Cookies=require('js-cookie')
+	</script>
 	<script type="text/javascript" src="js/common.js"></script>
 	<script type="text/javascript" src="js/schedule.js"></script>
 	<script type="text/javascript" src="src/app.js"></script>
 </head>
 
 <body>
-
 	<div class="center-wrapper">
 		<div class="center">
 			<div class="schedule-outer">
