--- a/index.html
+++ b/index.html
@@ -24,11 +24,8 @@
 		}
 	</style>
 
-
-	<script type="text/javascript">
-		window.$=window.jQuery=require('jquery')
-		window.Cookies=require('js-cookie')
-	</script>
+	<script type="text/javascript" src="vendor/zepto.min.js"></script>
+	<script type="text/javascript" src="src/zepto.ajaxSetup.js"></script>
 	<script type="text/javascript" src="js/common.js"></script>
 	<script type="text/javascript" src="js/schedule.js"></script>
 	<script type="text/javascript" src="src/app.js"></script>
