--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang='en'>
 <head>
 	<link rel="stylesheet" type="text/css" href="vendor/font-awesome.min.css">
-	<link rel="stylesheet" type="text/css" href="https://fonts.googleapis.com/css?family=Open+Sans:100italic,400italic,700italic,100,400,700" />
+	<link rel="stylesheet" type="text/css" href="src/opensans.css">
 
 	<link rel="stylesheet" type="text/css" href="css/base.css">
 
